--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>MoTeCH Mobile Web</display-name>
-
-    <servlet-mapping>
-        <servlet-name>IncomingMessageServlet</servlet-name>
-        <url-pattern>/incomingmessage</url-pattern>
-    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -38,9 +33,7 @@
     </listener>
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
-        <servlet-class>
-            org.apache.cxf.transport.servlet.CXFServlet
-        </servlet-class>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
@@ -52,9 +45,13 @@
     </servlet>
 
     <servlet>
-        <servlet-name>IncomingMessageServlet</servlet-name>
+        <servlet-name>IMPServlet</servlet-name>
         <servlet-class>com.dreamoval.motech.web.IncomingMessageServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>IMPServlet</servlet-name>
+        <url-pattern>/incomingmessage</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
         <url-pattern>/webservices/*</url-pattern>
