Incorporated new registrar service form methods. Modified validation process: used separate validators for each check (ie. required, format, length). Added validators for range and type Moved validation expressions to motech-settings.properties Moved registrar web service URIs to motech-settings.properties Wired Clickatell gateway properties from properties file Moved validator configuration from imp-config.xml to validator-config.xml

--- a/motech-mobile-omi/src/test/resources/omi.settings.properties
+++ b/motech-mobile-omi/src/test/resources/omi.settings.properties
@@ -1,2 +1,7 @@
+#Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
+
+#Registrar Web Service Properties
+registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
+registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
