--- a/motech-mobile-omp/src/test/resources/clickatell.properties
+++ b/motech-mobile-omp/src/test/resources/clickatell.properties
@@ -1,6 +1,7 @@
 clickatell.gateway.apiId=3107994
 clickatell.gateway.user=iwalletMobile
 clickatell.gateway.password=1dr3wa113t
-clickatell.gateway.sender=iwm
+clickatell.gateway.sender=MoTeCH
 clickatell.gateway.deliveryAcknowledge=1
 clickatell.gateway.callback=2
+clickatell.gateway.baseUrl=https://api.clickatell.com/http/
