--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -50,14 +50,35 @@ orserve.gateway.productCode=nu-ob-demo
 #clickatell.gateway.sender=iwm
 #clickatell.gateway.deliveryAcknowledge=1
 #clickatell.gateway.callback=2
+#clickatell.gateway.baseUrl=https://api.clickatell.com/http/
 
 #============================End of OMP Module Configurations=====================
 
 #============================OMI Module Configurations============================
+
+#Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
 
 #============================End of OMI Module Configurations=====================
+
+#============================IMP Module Configurations============================
+
+#Request Expressions
+imp.form.param.valueSparator=\=
+imp.form.param.delimiter=\\n
+
+#Command Expressions
+imp.form.commandExpression=^[tT](ype|YPE)
+imp.form.typeExpression=^[tT](ype|YPE)\\s*=\\s*\\w+
+imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
+
+#Validator Expressions
+imp.validator.dateFormat=dd/MM/yyyy
+imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
+imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
+
+#==========================End of IMP Module Configurations=======================
 
 #============================Web Module Configurations============================
 
@@ -71,3 +92,11 @@ com.dreamoval.motech.web.incomingMessageTextParam=text
 com.dreamoval.motech.web.error.UnknownRequest=Unknown Request
 
 #============================End of Web Module Configurations======================
+
+#============================Registrar Web Service Configurations==============
+
+#Registrar Web Service Properties
+registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
+registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
+
+#============================End of Registrar Web Service Configurations=======
