Fixed bugs occuring when running MessageServiceImplITCase.testProcessRequest()

--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -12,7 +12,19 @@
         <artifactId>motech-mobile</artifactId>
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
-    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
