Added "PHONETYPE" parameter type. Added unit tests for ParamRangeValidator, ParamValueValidator, ParamExpressionValidator and ParamSizeValidator

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -77,7 +77,8 @@ imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 #Validator Expressions
 imp.validator.dateFormat=dd.MM.yyyy
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
-imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
+imp.validator.alphaNumExpression=[a-zA-Z0-9.,'/\\-\\_\\s]+
+imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
