--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -15,6 +15,7 @@ imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
+imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
