--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
             <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
-                <version>1.0-M3-SNAPSHOT</version>
+                <version>1.0-M3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
