--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -3,13 +3,13 @@
     <groupId>com.dreamoval.motech</groupId>
     <artifactId>motech-mobile-omi</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-M3-SNAPSHOT</version>
+    <version>1.0-M3</version>
     <name>MoTeCH Mobile OMI</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
         <groupId>com.dreamoval</groupId>
         <artifactId>motech-mobile</artifactId>
-        <version>1.0-M3-SNAPSHOT</version>
+        <version>1.0-M3</version>
     </parent>
     <dependencies>
         <dependency>
