--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -3,13 +3,13 @@
     <groupId>com.dreamoval.motech</groupId>
     <artifactId>motech-mobile-core</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-M3</version>
+    <version>1.0-M4-SNAPSHOT</version>
     <name>MoTeCH Mobile Core</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
         <groupId>com.dreamoval</groupId>
         <artifactId>motech-mobile</artifactId>
-        <version>1.0-M3</version>
+        <version>1.0-M4-SNAPSHOT</version>
     </parent>
     <build>
         <plugins>
