Added webservice call for server side validation of ANC visit. Added check for requests already existing in database.

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -18,4 +18,5 @@ imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
+imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
