--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -81,6 +81,7 @@ imp.validator.alphaNumExpression=[a-zA-Z0-9.,'/\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
+imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
 
 #==========================End of IMP Module Configurations=======================
