Added methods for searching for duplcate messages within time frame. Added configuration for message duplicate detection period. Added configuration for responses to demo messages.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -84,6 +84,14 @@ imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
 
+#Period in minutes within which a duplicate message will be rejected
+imp.request.duplicatePeriod=10
+
+#Configuration for responses for demo
+imp.demo.messageType=SMS:TEXT
+imp.demo.provider=Vodafone
+imp.demo.senderAddr=+233000000000
+
 #==========================End of IMP Module Configurations=======================
 
 #============================Web Module Configurations============================
