--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -20,3 +20,11 @@ imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=[0-9]+(.[0-9]+)?
+
+#Period in hours within which a duplicate message will be rejected
+imp.request.duplicatePeriod=24
+
+#Configuration for responses for demo
+imp.demo.messageType=SMS:TEXT
+imp.demo.provider=Vodafone
+imp.demo.senderAddr=+233000000000
