--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -19,7 +19,7 @@ imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
-imp.validator.numericExpression=[0-9]+(.[0-9]+)?
+imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 
 #Period in hours within which a duplicate message will be rejected
 imp.request.duplicatePeriod=24
