--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -75,14 +75,14 @@ imp.form.typeExpression=^[tT](ype|YPE)\\s*=\\s*\\w+
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 
 #Validator Expressions
-imp.validator.dateFormat=dd.MM.yyyy
+imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
-imp.validator.alphaNumExpression=[a-zA-Z0-9.,'/\\-\\_\\s]+
+imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
-imp.validator.numericExpression=[0-9]+(.[0-9]+)?
+imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 
 #Period in minutes within which a duplicate message will be rejected
 imp.request.duplicatePeriod=10
