--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -7,8 +7,8 @@ imp.form.param.valueSparator=\=
 imp.form.param.delimiter=\\n
 
 #Command Expressions
-imp.form.commandExpression=^[tT](ype|YPE)
-imp.form.typeExpression=^[tT](ype|YPE)\\s*=\\s*\\w+
+imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
+imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 
 #Validator Expressions
