Added support for multiple date formats. Solved issues passing "NA" in numeric fields. Configured system to skip duplicate checking on queries.

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -13,6 +13,7 @@ imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
+imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\- /.]?(0[1-9]|1[012])[\\- /.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
