Added web service calls to the form validator for processing of queries. Include SMSMessageFormatterImpl to parse responses received from server to SMS format defined in updated queries spec (https://motech.rcg.usm.maine.edu/redmine/documents/show/15)

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -29,3 +29,8 @@ imp.request.duplicatePeriod=24
 imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
 imp.demo.senderAddr=+233000000000
+
+#OMI Messaging settings
+omi.settings.maxTries=3
+omi.settings.defaultLang=en
+omi.settings.dateFormat=dd/mm/yyyy
