--- a/motech-mobile-omi/src/test/resources/omi.settings.properties
+++ b/motech-mobile-omi/src/test/resources/omi.settings.properties
@@ -1,6 +1,7 @@
 #Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
+omi.settings.dateFormat=dd/mm/yyyy
 
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
