--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -60,6 +60,7 @@ orserve.gateway.productCode=nu-ob-demo
 #Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
+omi.settings.dateFormat=dd/mm/yyyy
 
 #============================End of OMI Module Configurations=====================
 
