--- a/motech-mobile-imp/pom.xml
+++ b/motech-mobile-imp/pom.xml
@@ -35,6 +35,11 @@
         </dependency>
         <dependency>
             <groupId>com.dreamoval.motech</groupId>
+            <artifactId>motech-mobile-omi</artifactId>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.dreamoval.motech</groupId>
             <artifactId>motech-mobile-omp</artifactId>
             <type>jar</type>
         </dependency>
