--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -89,6 +89,9 @@ imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 #Period in minutes within which a duplicate message will be rejected
 imp.request.duplicatePeriod=10
 
+#Variable for parsing java Forms as sms
+imp.xmlparser.formTypeTagName=formType
+
 #Configuration for responses for demo
 imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
