--- a/pom.xml
+++ b/pom.xml
@@ -459,6 +459,21 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.jdom</groupId>
+                <artifactId>jdom</artifactId>
+                <version>1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.motechproject.mforms</groupId>
+                <artifactId>xforms-server</artifactId>
+                <version>1.0-M5-beta-1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jzlib</artifactId>
+                <version>1.0.7</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
