Integrated Protocol for responding to epiHandy. Not tested.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -70,6 +70,9 @@ omi.settings.dateFormat=dd/mm/yyyy
 imp.form.param.valueSparator=\=
 imp.form.param.delimiter=\\n
 
+#Response Variable
+imp.form.successResponse=ok
+
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
 imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
@@ -91,6 +94,9 @@ imp.request.duplicatePeriod=10
 
 #Variable for parsing java Forms as sms
 imp.xmlparser.formTypeTagName=formType
+
+#OXD Setting
+imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/SampleStudy.xml
 
 #Configuration for responses for demo
 imp.demo.messageType=SMS:TEXT
