Tested Java Forms using SMS infrastructure.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -69,6 +69,7 @@ omi.settings.dateFormat=dd/mm/yyyy
 #Request Expressions
 imp.form.param.valueSparator=\=
 imp.form.param.delimiter=\\n
+imp.xform.param.delimiter=\n
 
 #Response Variable
 imp.form.successResponse=ok
@@ -79,7 +80,7 @@ imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 
 #Validator Expressions
-imp.validator.dateFormat=dd/MM/yyyy
+imp.validator.dateFormat=yyyy-MM-dd
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\- /.]?(0[1-9]|1[012])[\\- /.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
@@ -93,10 +94,10 @@ imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 imp.request.duplicatePeriod=10
 
 #Variable for parsing java Forms as sms
-imp.xmlparser.formTypeTagName=formType
+imp.xmlparser.formTypeTagName=formtype
 
 #OXD Setting
-imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/SampleStudy.xml
+imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
 
 #Configuration for responses for demo
 imp.demo.messageType=SMS:TEXT
@@ -118,7 +119,7 @@ com.dreamoval.motech.web.error.UnknownRequest=Unknown Request
 
 #============================End of Web Module Configurations======================
 
-#============================Registrar Web Service Configurations==============
+#============================Registrar Web Service Configurations==================
 
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
