Added functionality to send SMS response to user once oxd forms are successfully processed.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -98,6 +98,8 @@ imp.xmlparser.formTypeTagName=formtype
 
 #OXD Setting
 imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
+imp.oxd.senderField=sender
+imp.oxd.senderExpression=sender\\s*=\\s*\\w+
 
 #Configuration for responses for demo
 imp.demo.messageType=SMS:TEXT
