--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -11,6 +11,11 @@ imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
 imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
 
+#OXD Setting
+imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
+imp.oxd.senderField=sender
+imp.oxd.senderExpression=sender\\s*=\\s*\\w+
+
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\- /.]?(0[1-9]|1[012])[\\- /.]?(19|20)?\\d\\d
