Renamed sql import file to motech-mobile-create-database-with-test-data.sql (removed milestone name). Fixed issues with regular expression matching on XForm submission in IMPServiceImpl.java Updated date formats in motech-settings.properties. Specified month with "MM" in place of "mm". Added check for dates greater than the current date in submitted forms. Relates to issue #303

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -38,4 +38,4 @@ imp.demo.senderAddr=+233000000000
 #OMI Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
-omi.settings.dateFormat=dd/mm/yyyy
+omi.settings.dateFormat=dd/MM/yyyy
