--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -60,7 +60,7 @@ orserve.gateway.productCode=nu-ob-demo
 #Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
-omi.settings.dateFormat=dd/mm/yyyy
+omi.settings.dateFormat=dd/MM/yyyy
 
 #============================End of OMI Module Configurations=====================
 
@@ -99,7 +99,7 @@ imp.xmlparser.formTypeTagName=formtype
 #OXD Setting
 imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
 imp.oxd.senderField=sender
-imp.oxd.senderExpression=sender\\s*=\\s*\\w+
+imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 
 #Configuration for responses for demo
 imp.demo.messageType=SMS:TEXT
