--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,7 @@
             <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
-                <version>1.0-M4-SNAPSHOT</version>
+                <version>1.0-M4</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
