--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -1,16 +1,15 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dreamoval.motech</groupId>
     <artifactId>motech-mobile-omi</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-M4-SNAPSHOT</version>
+    <version>1.0-M4</version>
     <name>MoTeCH Mobile OMI</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
         <groupId>com.dreamoval</groupId>
         <artifactId>motech-mobile</artifactId>
-        <version>1.0-M4-SNAPSHOT</version>
+        <version>1.0-M4</version>
     </parent>
     <dependencies>
         <dependency>
@@ -20,7 +19,7 @@
         <dependency>
             <groupId>com.dreamoval.motech</groupId>
             <artifactId>motech-mobile-omp</artifactId>
-            <version>1.0-M4-SNAPSHOT</version>
+            <version>1.0-M4</version>
             <type>jar</type>
         </dependency>
         <dependency>
