--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -77,7 +77,7 @@ imp.form.successResponse=ok
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
 imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
-imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.'])+
+imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
 #Validator Expressions
 imp.validator.dateFormat=yyyy-MM-dd
