--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -1,14 +1,14 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.dreamoval.motech</groupId>
+    <groupId>org.motechproject.mobile</groupId>
     <artifactId>motech-mobile-omp</artifactId>
     <packaging>jar</packaging>
     <version>1.0-M5-SNAPSHOT</version>
     <name>Motech Mobile OMP</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
-        <groupId>com.dreamoval</groupId>
+        <groupId>org.motechproject.mobile</groupId>
         <artifactId>motech-mobile</artifactId>
         <version>1.0-M5-SNAPSHOT</version>
     </parent>
@@ -56,7 +56,7 @@
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.dreamoval.motech</groupId>
+            <groupId>org.motechproject.mobile</groupId>
             <artifactId>motech-mobile-core</artifactId>
         </dependency>
         <dependency>
