--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.dreamoval</groupId>
+    <groupId>org.motechproject.mobile</groupId>
     <artifactId>motech-mobile</artifactId>
     <packaging>pom</packaging>
     <version>1.0-M5-SNAPSHOT</version>
@@ -207,22 +207,22 @@
                 <version>1.2.14</version>
             </dependency>
             <dependency>
-                <groupId>com.dreamoval.motech</groupId>
+                <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-core</artifactId>
                 <version>1.0-M5-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.dreamoval.motech</groupId>
+                <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-omp</artifactId>
                 <version>1.0-M5-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.dreamoval.motech</groupId>
+                <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-omi</artifactId>
                 <version>1.0-M5-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.dreamoval.motech</groupId>
+                <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-imp</artifactId>
                 <version>1.0-M5-SNAPSHOT</version>
             </dependency>
