--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -8,7 +8,7 @@
     <name>MoTeCH Mobile OMI</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
-        <groupId>org.motechproject.mobile</groupId>
+        <groupId>org.motechproject</groupId>
         <artifactId>motech-mobile</artifactId>
         <version>1.0-M5-SNAPSHOT</version>
     </parent>
