Added support for mapping different UIs to MoTeCH forms.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -95,6 +95,7 @@ imp.request.duplicatePeriod=10
 
 #Variable for parsing java Forms as sms
 imp.xmlparser.formTypeTagName=formtype
+imp.xmlparser.formNameTagName=formname
 
 #OXD Setting
 imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
