Updated IMP and OMI processes for Java form processing and sending of query responses

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -5,19 +5,18 @@ registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 #Request Expressions
 imp.form.param.valueSparator=\=
 imp.form.param.delimiter=\\n
+imp.xform.param.delimiter=\n
+
+#Response Variable
+imp.form.successResponse=ok
 
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
 imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
-#OXD Setting
-imp.oxd.oxdFormDefsResourceName=/oxd-form-defs/MoTeCHDataEntry.xml
-imp.oxd.senderField=sender
-imp.oxd.senderExpression=sender\\s*=\\s*\\w+
-
 #Validator Expressions
-imp.validator.dateFormat=dd/MM/yyyy
+imp.validator.dateFormat=yyyy-MM-dd
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
@@ -27,10 +26,27 @@ imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 
-#Period in hours within which a duplicate message will be rejected
-imp.request.duplicatePeriod=24
+#Period in minutes within which a duplicate message will be rejected
+imp.request.duplicatePeriod=10
 
-#Configuration for responses for demo
+#Variable for parsing java Forms as sms
+imp.xmlparser.formTypeTagName=formtype
+imp.xmlparser.formNameTagName=formname
+
+#OXD Setting
+imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
+imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
+imp.oxd.senderField=sender
+imp.oxd.senderExpression=sender\\s*=\\s*\\d+
+imp.oxd.queryExpression=query\\s*=\\s*\\w+
+
+#Configuration for sms responses
+imp.response.maxConcat=10
+imp.response.charsPerSMS=160
+imp.response.concatAllowance=7
+imp.response.maxSMS=3
+
+#Configuration for demo responses
 imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
 imp.demo.senderAddr=+233000000000
@@ -39,3 +55,6 @@ imp.demo.senderAddr=+233000000000
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
 omi.settings.dateFormat=dd/MM/yyyy
+omi.settings.maxConcat=10
+omi.settings.charsPerSMS=160
+omi.settings.concatAllowance=7
