--- a/motech-mobile-omi/src/test/resources/omi.settings.properties
+++ b/motech-mobile-omi/src/test/resources/omi.settings.properties
@@ -2,6 +2,9 @@
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
 omi.settings.dateFormat=dd/mm/yyyy
+omi.settings.maxConcat=10
+omi.settings.charsPerSMS=160
+omi.settings.concatAllowance=7
 
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
