--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -61,6 +61,9 @@ orserve.gateway.productCode=nu-ob-demo
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
 omi.settings.dateFormat=dd/MM/yyyy
+omi.settings.maxConcat=10
+omi.settings.charsPerSMS=160
+omi.settings.concatAllowance=7
 
 #============================End of OMI Module Configurations=====================
 
@@ -102,8 +105,15 @@ imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
 imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
+imp.oxd.queryExpression=query\\s*=\\s*\\w+
 
-#Configuration for responses for demo
+#Configuration for sms responses
+imp.response.maxConcat=10
+imp.response.charsPerSMS=160
+imp.response.concatAllowance=7
+imp.response.maxSMS=3
+
+#Configuration for demo responses
 imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
 imp.demo.senderAddr=+233000000000
