Solved issues parsing dates from openXdata. Issue caused by inconsistent date formats between motech-mobile and openXdata. Removed limitation on IMP response.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -83,7 +83,7 @@ imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
 #Validator Expressions
-imp.validator.dateFormat=yyyy-MM-dd
+imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
@@ -106,6 +106,8 @@ imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
+imp.oxd.dateExpression=(19|20)\\d\\d\\-(0[1-9]|1[012])\\-(0[1-9]|[12][0-9]|3[01])
+imp.oxd.dateFormat=yyyy-MM-dd
 
 #Configuration for sms responses
 imp.response.maxConcat=10
