--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -3,16 +3,16 @@
 #============================Core Module Configurations============================
 ###Hibernate/JDBC Settings
 ##HSQL
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
+#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#hibernate.show_sql=false
+#hibernate.hbm2ddl.auto=create
 
 
 ##HSQL JDBC
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.username=sa
-jdbc.password=
-jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
+#jdbc.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.username=sa
+#jdbc.password=
+#jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 
 ##Derby
 #hibernate.dialect=org.hibernate.dialect.DerbyDialect
@@ -26,15 +26,15 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 #jdbc.url=jdbc:derby:motechmobiledb;create=true
 
 ##MySQL
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#hibernate.show_sql=false
-#hibernate.hbm2ddl.auto=validate
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=validate
 
 ##MySQL JDBC
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.username=motechmobile
-#jdbc.password=mmobilepass
-#jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.username=motechmobile
+jdbc.password=mmobilepass
+jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
 #============================End of Core Module Configurations====================
 
