Found the autogenerated jaxb classes from the intellivr schema were being generated in wrong package.  Updated the package in the pom.  Fixed the ripple of errors resulting from the change.

--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -60,7 +60,7 @@
                     </execution>
                </executions>
                <configuration>
-                    <packageName>org.motechproject.omp.manager.intellivr</packageName>
+                    <packageName>org.motechproject.mobile.omp.manager.intellivr</packageName>
                     <outputDirectory>${project.build.directory}/generated-sources/jaxb</outputDirectory>
                     <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
                     <schemaFiles>intellivr.xsd</schemaFiles>
