--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -48,24 +48,49 @@
                     <catalog>${basedir}/src/jax-ws-catalog.xml</catalog>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>1.3</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-               </executions>
-               <configuration>
-                    <packageName>org.motechproject.mobile.omp.manager.intellivr</packageName>
-                    <outputDirectory>${project.build.directory}/generated-sources/jaxb</outputDirectory>
-                    <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
-                    <schemaFiles>intellivr.xsd</schemaFiles>
-               </configuration>
-           </plugin>
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.7.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+		                    <generatePackage>org.motechproject.mobile.omp.manager.intellivr</generatePackage>
+         		            <generateDirectory>${project.build.directory}/generated-sources/jaxb</generateDirectory>
+                		    <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
+                		    <schemaIncludes>
+                		    	<schemaInclude>intellivr.xsd</schemaInclude>
+                		    </schemaIncludes>
+							<args>
+								<arg>-XtoString</arg>
+								<arg>-Xequals</arg>
+								<arg>-XhashCode</arg>
+								<arg>-Xcopyable</arg>
+							</args>
+							<plugins>
+								<plugin>
+									<groupId>org.jvnet.jaxb2_commons</groupId>
+									<artifactId>basic</artifactId>
+									<version>0.4.1.4</version>
+									<exclusions>
+										<exclusion>
+											<groupId>com.sun.xml.bind</groupId>
+											<artifactId>jaxb-impl</artifactId>
+										</exclusion>
+										<exclusion>
+											<groupId>com.sun.xml.bind</groupId>
+											<artifactId>jaxb-xjc</artifactId>
+										</exclusion>
+									</exclusions>
+								</plugin>
+							</plugins>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
         </plugins>
     </build>
     <dependencies>
@@ -125,6 +150,16 @@
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
+       	<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.1.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>runtime</artifactId>
+			<version>0.4.1.4</version>
+		</dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
