Applied "motech-mobile-354.patch":https://motech.rcg.usm.maine.edu/redmine/attachments/152/motech-mobile-354.patch. Enables direct download of studies from motech-mobile-webapp. fixes #354

--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,14 @@
         <servlet-name>OXDFormUploadServlet</servlet-name>
         <servlet-class>org.motechproject.mobile.web.OXDFormUploadServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>OXDFormDownloadServlet</servlet-name>
+        <servlet-class>org.motechproject.mobile.web.OXDFormDownloadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OXDFormDownloadServlet</servlet-name>
+        <url-pattern>/formdownload</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>OXDFormUploadServlet</servlet-name>
         <url-pattern>/formupload</url-pattern>
